2006-01-27  Ville Vainio  <vivainio@gmail.com>  

	* ipmaker.py: Give "realistic" sys.argv for scripts (without 
	'ipython' at argv[0]) executed through command line. 
	NOTE: this DEPRECATES calling ipython with multiple scripts 
	("ipython a.py b.py c.py")
	
	* iplib.py, hooks.py: Added configurable input prefilter,
	named 'input_prefilter'. See ext_rescapture.py for example
	usage.
	
	* ext_rescapture.py, Magic.py: Better system command output capture
	through 'var = !ls' (deprecates user-visible %sc). Same notation
	applies for magics, 'var = %alias' assigns alias list to var.
	
	* ipapi.py: added meta() for accessing extension-usable data store.
	
	* iplib.py: added InteractiveShell.getapi(). New magics should be
	written doing self.getapi() instead of using the shell directly.
	
	* Magic.py: %store now allows doing %store foo > ~/myfoo.txt and
	%store foo >> ~/myfoo.txt to store variables to files (in clean 
	textual form, not a restorable pickle).
	
	* ipmaker.py: now import ipy_profile_PROFILENAME automatically
	
	* usage.py, Magic.py: added %quickref
	
	* iplib.py: ESC_PAREN fixes: /f 1 2 -> f(1,2), not f(1 2).
	
	* GetoptErrors when invoking magics etc. with wrong args 
	are now more helpful: 
	GetoptError: option -l not recognized (allowed: "qb" )

2006-01-25  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/demo.py (Demo.show): Flush stdout after each block, so
	computationally intensive blocks don't appear to stall the demo.

2006-01-24  Ville Vainio  <vivainio@gmail.com>  

	* iplib.py, hooks.py: 'result_display' hook can return a non-None
	value to manipulate resulting history entry.
	
	* ipapi.py: Moved TryNext here from hooks.py. Moved functions
	to instance methods of IPApi class, to make extending an embedded  
	IPython feasible. See ext_rehashdir.py for example usage.
	
	* Merged 1071-1076 from banches/0.7.1


2006-01-23  Fernando Perez  <Fernando.Perez@colorado.edu>

	* tools/release (daystamp): Fix build tools to use the new